Replace most call to grep in run-make by a script that cat the input.
Introduced a new src/etc/cat-and-grep.sh script (called in run-make as
$(CGREP)), which prints the input and do a grep simultaneously. This is
mainly used to debug spurious failures in run-make, such as the sanitizer
error in #45810, as well as real errors such as #46126.

--- a/src/test/run-make/cdylib-fewer-symbols/Makefile
+++ b/src/test/run-make/cdylib-fewer-symbols/Makefile
@@ -9,9 +9,5 @@ all:
 else
 all:
 	$(RUSTC) foo.rs
-	nm -g "$(call DYLIB,foo)"
-	nm -g "$(call DYLIB,foo)" | grep -vq __rdl_
-	nm -g "$(call DYLIB,foo)" | grep -vq __rde_
-	nm -g "$(call DYLIB,foo)" | grep -vq __rg_
-	nm -g "$(call DYLIB,foo)" | grep -vq __rust_
+	nm -g "$(call DYLIB,foo)" | $(CGREP) -v __rdl_ __rde_ __rg_ __rust_
 endif
